# PyFlame

./: .gitignore  README.md  build.sh  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py
blog/static/css/: blog.css
blog/templates/blog/: base.html
blog/templates/blog/post/: detail.html  edit_post.html  list.html  new_post.html
chat/: models.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/templates/chat/: create_room.html  index.html  room.html  room_detail.html
flame/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
profile_info/: apps.py  models.py  tests.py  urls.py  validators.py  views.py
profile_info/management/commands/: create_initial_superuser.py
pyflame/: apps.py  urls.py  views.py
pyflame/static/js/: sine-wave.js
pyflame/templates/pyflame/: base.html  index.html
templates/: base.html  profile.html
templates/django_registration/: activation_complete.html  activation_email_body.txt  activation_email_subject.txt  registration_complete.html  registration_form.html
templates/registration/: login.html
